--- a/scripts/01c Finalized Anther Models.Rmd
+++ b/scripts/01c Finalized Anther Models.Rmd
@@ -7,6 +7,7 @@ output: html_notebook
 library(tidyverse)
 library(skimr)
 library(brms)
+# you also need package rethinking although it isn't loaded
 ```
 
 ## Data import and wrangle
