--- a/scripts/02c Finalized Style Models.Rmd
+++ b/scripts/02c Finalized Style Models.Rmd
@@ -7,6 +7,7 @@ output: html_notebook
 library(tidyverse)
 library(skimr)
 library(brms)
+# package rethinking also needed but not loaded.
 ```
 
 ## Data import and wrangle
